# ariadne

./: .gitignore  .travis.yml  CMakeLists.txt
cmake/: FindCUDA.cmake
python/source/: CMakeLists.txt
source/algebra/: CMakeLists.txt
source/cuda/: CMakeLists.txt  MatrixMultiplication_bomb.cu  cuda_lib.cu  cuda_lib.hpp  main.cpp
source/dynamics/: CMakeLists.txt  inclusion_evolver.cpp  inclusion_evolver.hpp
source/function/: CMakeLists.txt  taylor_model.tpl.hpp
source/geometry/: CMakeLists.txt
source/hybrid/: CMakeLists.txt
source/numeric/: CMakeLists.txt
source/output/: CMakeLists.txt
source/solvers/: CMakeLists.txt
source/symbolic/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cuda/: CMakeLists.txt  has_cuda_gpu.cu  test_cuda_float.cpp  test_cuda_procedure.cpp
